layout fixed! No longer breaking out on mobile

--- a/src/routes/breakpoints.scss
+++ b/src/routes/breakpoints.scss
@@ -1,1 +1,2 @@
+$sm-mobile-breakpoint: 450px;
 $col-breakpoint: 1400px;
