--- a/src/routes/styles.scss
+++ b/src/routes/styles.scss
@@ -1,7 +1,5 @@
 @import '@fontsource/fira-mono';
 
-
-
 :root {
   --font-body: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -33,12 +31,10 @@
 html, body {
   padding: 0;
   margin: 0;
-  width: 100%;
+  width: 100vw;
 }
 
 body {
-  // width: 100vw;
-  margin: 0;
   background-attachment: fixed;
   background-color: var(--color-bg-1);
   background-size: 100vw 100vh;
@@ -54,12 +50,6 @@ body {
       var(--color-bg-2) 50%
     );
     scroll-behavior: smooth;
-}
-
-@media screen and (max-width: 450px) {
-  body {
-    background-image: none
-  }
 }
 
 h1,
